<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4D000000"
    android:clickable="true"

    android:paddingStart="30dp"
    android:paddingTop="60dp"
    android:paddingEnd="30dp"
    android:paddingBottom="60dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        android:orientation="vertical">

        <TextView
            android:id="@+id/change_labels_main_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/change_labels_title_text"
            android:textSize="28dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/change_labels_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <LinearLayout
        android:id='@+id/buttons'
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_vertical|end">

        <Button
            android:id="@+id/apply_label_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/change_labels_cancel_button" />

        <Button
            android:id="@+id/apply_label_done_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/change_labels_done_button" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>